<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nanodegree.myappportfolio.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNanodegreeApps"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margins30"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSpotifyStreamer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:padding="@dimen/margins10"
                android:text="@string/textSpotifyRunner"
                android:textColor="@drawable/drawable_button_text"
                android:background="@drawable/drawable_button_background"
                android:layout_marginBottom="@dimen/margins10"/>

            <Button
                android:id="@+id/btnSuperDuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:padding="@dimen/margins10"
                android:text="@string/textSuperDuo"
                android:textColor="@drawable/drawable_button_text"
                android:background="@drawable/drawable_button_background"
                android:layout_marginBottom="@dimen/margins10"/>

            <Button
                android:id="@+id/btnBuildItBigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:padding="@dimen/margins10"
                android:text="@string/textBuiltItBigger"
                android:textColor="@drawable/drawable_button_text"
                android:background="@drawable/drawable_button_background"
                android:layout_marginBottom="@dimen/margins10"/>

            <Button
                android:id="@+id/btnXYZReader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:padding="@dimen/margins10"
                android:text="@string/textXYZReader"
                android:textColor="@drawable/drawable_button_text"
                android:background="@drawable/drawable_button_background"
                android:layout_marginBottom="@dimen/margins10"/>

            <Button
                android:id="@+id/btnCapstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:padding="@dimen/margins10"
                android:text="@string/textCapstone"
                android:textColor="@drawable/drawable_button_text"
                android:background="@drawable/drawable_button_background"
                android:layout_marginBottom="@dimen/margins10"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
